<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btnInstructions"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:padding="20dp"
        android:text="@string/instructions"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnExit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnExit"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="120dp"
        android:padding="20dp"
        android:text="@string/exit"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/btnInstructions" />

    <Button
        android:id="@+id/btnPlay"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:padding="20dp"
        android:text="@string/play"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnInstructions"
        app:layout_constraintStart_toStartOf="@+id/btnInstructions" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:layout_marginTop="8dp"
        android:text="@string/techwords"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnPlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.977" />
</android.support.constraint.ConstraintLayout>