<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="25dp">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="23dp"
        android:layout_marginBottom="26dp"
        android:text="@string/palavra"
        app:layout_constraintBottom_toTopOf="@+id/edtPalavra"
        app:layout_constraintStart_toStartOf="@+id/edtID"
        app:layout_constraintTop_toBottomOf="@+id/edtID" />

    <EditText
        android:id="@+id/edtPalavra"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginBottom="17dp"
        android:layout_marginEnd="53dp"
        android:layout_marginStart="53dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/descricao"
        app:layout_constraintBottom_toTopOf="@+id/edtDescricao"
        app:layout_constraintStart_toStartOf="@+id/edtDescricao"
        app:layout_constraintTop_toBottomOf="@+id/edtPalavra" />

    <EditText
        android:id="@+id/edtDescricao"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginBottom="180dp"
        android:layout_marginEnd="53dp"
        android:layout_marginStart="53dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="39dp"
        android:layout_marginStart="53dp"
        android:layout_marginTop="36dp"
        android:text="@string/teste_banco"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="19dp"
        android:text="@string/id"
        app:layout_constraintBottom_toTopOf="@+id/edtID"
        app:layout_constraintStart_toStartOf="@+id/edtID"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/edtID"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginBottom="257dp"
        android:layout_marginEnd="53dp"
        android:layout_marginStart="53dp"
        android:layout_marginTop="132dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/btnSalvar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSalvar"
        android:layout_width="wrap_content"
        android:layout_height="53dp"
        android:layout_marginBottom="84dp"
        android:text="@string/salvar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtID" />

</android.support.constraint.ConstraintLayout>